# rhdndat

./: MANIFEST.in  README.rst  pyproject.toml  setup.py
.github/workflows/: rhdndat.yml
rhdndat/: __init__.py  __main__.py
