[tool.poetry]
name = "rhdndat"
version = "2.0.0"
description = "www.romhacking.net update checker"
authors = ["i30817 <i30817@gmail.com>"]
license = "GNU Ge

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
pick = "^1.2.0"
xattr = "^0.9.9"
beautifulsoup4 = "^4.10.0"
colorama = "^0.4.4"
psutil = "^5.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
rhdndat = 'rhdndat.__main__:main'
rhdndat-rn = 'rhdndat.__main__:rename'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
