[tool.poetry]
name = "rhdndat"
version = "2.3.0"
description = "www.romhacking.net update checker"
authors = ["i30817 <i30817@gmail.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.5.0"
pick = "^1.2.0"
colorama = "^0.4.4"
beautifulsoup4 = "^4.10.0"
lxml = "^4.8.0"
xattr = {version = "^0.9.9", markers = "sys_platform == 'linux2'"}


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
rhdndat = 'rhdndat.__main__:main'
rhdndat-rn = 'rhdndat.__main__:rename'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
