[tool.poetry]
name = "rhdndat"
version = "2.6.7"
description = "www.romhacking.net update checker"
authors = ["i30817 <i30817@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.rst"
repository = "https://github.com/i30817/rhdndat"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.10.0"
questionary = "^1.10.0"
typer = "^0.5.0"
colorama = "^0.4.4"
lxml = "^4.9.1"
chd-rs-py = "^*"
xattr = [
    { version = "^0.9.9", markers = "sys_platform != 'win32'" },
]

[tool.poetry.scripts]
rhdndat = 'rhdndat.__main__:main'
rhdndat-rn = 'rhdndat.__main__:rename'

[tool.poetry.urls]
"homepage" = 'https://github.com/i30817/rhdndat'
"documentation" = 'https://github.com/i30817/rhdndat#readme'
"Bug Tracker" = 'https://github.com/i30817/rhdndat/issues'

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
